added yaml support

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/thefallenmerc/pensil-marketplace-documentation#readme",
   "dependencies": {
     "express": "^4.17.2",
+    "js-yaml": "^4.1.0",
     "nodemon": "^2.0.15",
     "swagger-ui-express": "^4.3.0"
   }
